--- a/main.html
+++ b/main.html
@@ -8,9 +8,12 @@
 
 <body>
 	<h1>my fav animal below</h1>
-	<img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://media.istockphoto.com/id/1349321709/photo/full-length-shot-of-an-adorable-dog-lying-on-the-sofa-at-home.jpg?b=1&amp;s=170667a&amp;w=0&amp;k=20&amp;c=QNW8aqRyNqrKDxmWPgA29775-lML_lJOH5YYl9vGBxk=">
+	<img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/golden-retriever-royalty-free-image-506756303-1560962726.jpg?crop=0.672xw:1.00xh;0.166xw,0&resize=640:*" alt="fav dog">
 	<p>
-		Man's best friend is something to behold in all forms: gorgeous Golden Retrievers, tiny yapping chihuahuas, fearsome pitbulls. Unsplash's community of incredible photographers has helped us curate an amazing selection of dog images that you can access and use free of charge.
+		Man's best friend is something to behold in all forms: gorgeous Golden Retrievers,
+        tiny yapping chihuahuas, fearsome pitbulls.
+        Unsplash's community of incredible photographers has helped us curate an amazing selection of dog 
+        images that you can access and use free of charge.
 		</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
